--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -6,7 +6,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "async-array-methods": "^2.1.0",
+    "commander": "^2.9.0",
+    "fs-extra-promisify": "0.0.2",
+    "to-js": "0.0.4",
+    "winston": "^2.2.0"
+  },
   "author": "Tyler Benton <tjbenton21@gmail.com> (https://github.com/tjbenton)",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tjbenton/docs.git"
+  },
   "license": "ISC",
   "keywords": [
     "css",
