--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -19,17 +19,37 @@
   "homepage": "https://github.com/tjbenton/docs#readme",
   "devDependencies": {
     "babel-eslint": "^6.0.4",
+    "babel-plugin-syntax-async-functions": "^6.5.0",
+    "babel-plugin-transform-async-to-generator": "^6.7.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-regenerator": "^6.6.5",
+    "babel-plugin-transform-runtime": "^6.8.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.8.0",
     "chalk": "^1.1.3",
     "coveralls": "^2.11.8",
     "eslint": "^2.5.3",
     "eslint-plugin-babel": "^3.1.0",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^6.1.2",
-    "gulp-newer": "^1.1.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.5",
+    "fly": "^1.2.4",
+    "fly-babel": "^0.7.1",
+    "fly-esnext": "github:tjbenton/fly-esnext",
+    "fs-extra-promisify": "0.0.2",
+    "globby": "^4.0.0",
     "lerna": "^1.1.2",
-    "through2": "^2.0.1"
+    "mocha": "^2.4.5"
+  },
+  "babel": {
+    "presets": [
+      "es2015",
+      "stage-0"
+    ],
+    "plugins": [
+      "syntax-async-functions",
+      "transform-async-to-generator",
+      "transform-decorators-legacy",
+      "transform-regenerator",
+      "transform-runtime"
+    ]
   }
 }
