--- a/packages/docs-example/package.json
+++ b/packages/docs-example/package.json
@@ -4,9 +4,11 @@
   "description": "This project is used to show how you can use docs",
   "main": "index.js",
   "scripts": {
+    "build": "which docs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tyler Benton <tjbenton21@gmail.com> (https://github.com/tjbenton)",
   "license": "ISC",
-  "private": true
+  "private": true,
+  "dependencies": {}
 }
