--- a/packages/docs-parser/package.json
+++ b/packages/docs-parser/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "docs",
+  "name": "docs-parser",
   "description": "Documentation chameleon, adapts to any language and will help you document all the things.",
   "author": "Tyler Benton <tjbenton21@gmail.com>",
-  "version": "0.0.1-beta",
+  "version": "0.0.0",
   "main": "dist/index.js",
   "scripts": {
     "clean": "rm -rf ./dist",
     "refresh": "rm -rf -- node_modules/ .tmp/ dist/ .nyc_output/ coverage/; npm i",
-    "compile": "npm run clean; babel app/ -d dist/",
     "watch": "npm run clean; babel app/ -d dist/ --watch",
     "mocha": "mocha --compilers js:babel-register --ui tdd --check-leaks --colors --delay --bail",
     "unit-tests": "npm run mocha -- tests/unit/*.js tests/unit/**/*.js",
@@ -16,8 +15,7 @@
     "coverage": "nyc npm run unit-tests",
     "coveralls": "npm run coverage && nyc report --reporter=text-lcov | coveralls",
     "plato": "rm -rf coverage/plato; plato --recurse --exclude .json --jshint .jshintrc -d coverage/plato  app",
-    "deploy": "npm run test && git push origin master && npm publish",
-    "prepublish": "npm run compile"
+    "deploy": "npm run test && git push origin master && npm publish"
   },
   "nyc": {
     "exclude": [
@@ -40,7 +38,7 @@
     "url": "https://github.com/tjbenton/docs/issues"
   },
   "bin": {
-    "docs": "bin/docs-parser"
+    "docs-parser": "bin/docs-parser"
   },
   "engines": {
     "node": ">=0.12.0"
@@ -50,29 +48,17 @@
     "babel-runtime": "^6.6.1",
     "change-case": "^2.3.1",
     "chokidar": "^1.4.3",
-    "clone": "^1.0.2",
     "clor": "^2.0.2",
     "commander": "^2.9.0",
-    "es6-promisify": "^3.0.0",
-    "fs-extra": "^0.26.5",
-    "glob": "^7.0.0",
-    "is_js": "^0.8.0",
-    "marked": "^0.3.5"
+    "fs-extra-promisify": "^0.0.2",
+    "globby": "^4.0.0",
+    "to-js": "^0.0.4"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
-    "babel-eslint": "^6.0.4",
-    "babel-plugin-syntax-async-functions": "^6.5.0",
-    "babel-plugin-transform-async-to-generator": "^6.7.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-regenerator": "^6.6.5",
-    "babel-plugin-transform-runtime": "^6.6.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.6.5",
-    "core-assert": "^0.1.3",
+    "core-assert": "^0.2.0",
     "mocha": "^2.4.5",
-    "nyc": "^6.0.0",
+    "nyc": "^6.4.4",
     "plato": "deedubs/es6-plato",
     "proxyquire": "^1.7.4",
     "sinon": "^1.17.3"
