--- a/package.json
+++ b/package.json
@@ -31,13 +31,15 @@
     "coveralls": "^2.11.8",
     "eslint": "^2.5.3",
     "eslint-plugin-babel": "^3.1.0",
-    "fly": "^1.2.4",
-    "fly-babel": "^0.7.1",
-    "fly-esnext": "github:tjbenton/fly-esnext",
+    "fly": "^1.3.0",
+    "fly-babel": "^0.8.0",
+    "fly-esnext": "^1.0.1",
+    "fly-mocha": "^0.4.3",
     "fs-extra-promisify": "0.0.2",
-    "globby": "^4.0.0",
+    "globby": "^5.0.0",
     "lerna": "^1.1.2",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "tape": "^4.6.0"
   },
   "babel": {
     "presets": [
