--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eslint-plugin-babel": "^3.1.0",
     "fly": "^1.3.0",
     "fly-babel": "^0.8.0",
-    "fly-esnext": "^1.0.1",
+    "fly-esnext": "github:tjbenton/fly-esnext",
     "fly-mocha": "^0.4.3",
     "fs-extra-promisify": "0.0.2",
     "globby": "^5.0.0",
