--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,7 @@
     "experimentalObjectRestSpread": true
   },
   "env": {
+    "browser": true,
     "node": true,
     "mocha": true,
     "es6": true
@@ -81,10 +82,10 @@
         "min": 2,
         "max": 30,
         "properties": "always",
-        "exceptions": [ "i", "k", "a", "b", "c", "d", "e", "l", "x", "y", "z", "_", "t" ]
+        "exceptions": [ "i", "k", "a", "b", "c", "d", "e", "l", "x", "y", "z", "_", "t", "$" ]
       }
     ],
-    "id-match": [ 2, "^(?:[a-z]{2,}([A-Z]{1}[a-z]+)*$)|([a-z_]+$)" ],
+    "id-match": [ 2, "^(?:[a-z]{2,}([A-Z]{1}[a-z]+)*$)|([a-z_]+$)|\\$" ],
     "indent": [ 2, 2 , { "SwitchCase": 1 } ],
     "key-spacing": [ 2, { "beforeColon": false, "afterColon": true } ],
     "linebreak-style": [ 2, "unix" ],
