--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,13 @@
-language: node_js
-
-node_js:
-  - "iojs"
-  - "0.12"
-  - "4.0"
-  - "4"
-  - "5.0"
-  - "5"
-  - "6.0"
-  - "6"
+git:
+  depth: 1
 sudo: false
-install: make boostrap
+language: node_js
+cache:
+  directories:
+    - node_modules
+node_js:
+  - "6"
+  - "5"
+  - "4"
+  - "0.12"
 script: make ci-test
