--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "make test"
+    "postinstall": "make bootstrap"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   "private": true,
   "homepage": "https://github.com/tjbenton/docs#readme",
   "devDependencies": {
+    "async-array-methods": "^2.1.0",
     "ava": "^0.15.2",
     "ava-spec": "^1.0.1",
     "babel-eslint": "^6.0.4",
