--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "fs-extra-promisify": "0.0.2",
     "globby": "^5.0.0",
     "jsondiffpatch": "^0.1.43",
-    "lerna": "^1.1.2",
+    "lerna": "2.0.0-beta.24",
     "mocha": "^2.4.5",
     "power-assert": "^1.4.1"
   },
