--- a/packages/docs-theme-default/package.json
+++ b/packages/docs-theme-default/package.json
@@ -7,9 +7,9 @@
     "start": "NODE_ENV=development & DEBUG=docs-theme-default:* & nodemon --watch server server/index.js",
     "refresh": "rm -rf node_modules/ public/jspm_packages/ public/styles/; npm i",
     "inspector": "NODE_ENV=development & DEBUG=docs-theme-default:* & node-inspector --web-port=6543 --debug-port=4567 & nodemon --debug=4567 app.js",
-    "preinstall": "node-gyp",
+    "preinstall-no-run": "node-gyp",
     "copy": "rm -rf public/js public/images; cp -rf app/js public; cp -rf app/images public",
-    "postinstall": "jspm install; rename -d '.css' -a '.styl' node_modules/highlight.js/styles/*.css",
+    "postinstall-no-run": "jspm install; rename -d '.css' -a '.styl' node_modules/highlight.js/styles/*.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -22,7 +22,7 @@
     "url": "https://github.com/tjbenton/docs-theme-default/issues"
   },
   "homepage": "https://github.com/tjbenton/docs-theme-default#readme",
-  "dependencies": {
+  "dependencies-no-run": {
     "autoprefixer": "^6.3.5",
     "babel-plugin-transform-runtime": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
