--- a/package.json
+++ b/package.json
@@ -37,13 +37,12 @@
     "fly": "^1.3.0",
     "fly-ava": "^0.11.0",
     "fly-babel": "^0.8.0",
-    "fly-esnext": "github:tjbenton/fly-esnext",
+    "fly-esnext": "tjbenton/fly-esnext",
     "fly-mocha": "^0.4.3",
     "fs-extra-promisify": "0.0.2",
     "globby": "^5.0.0",
     "jsondiffpatch": "^0.1.43",
     "lerna": "2.0.0-beta.24",
-    "mocha": "^2.4.5",
     "power-assert": "^1.4.1"
   },
   "ava": {
