--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,12 @@
 {
   "lerna": "2.0.0-beta.24",
-  "version": "0.0.0",
+  "version": "0.0.0-alpha.1",
+  "publishConfig": {
+    "ignore": [
+      "docs-example"
+    ]
+  },
   "bootstrapConfig": {
-    "ignore": "docs-them-default"
+    "ignore": "docs-theme-default"
   }
 }
