--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "jsondiffpatch": "^0.1.43",
     "lerna": "2.0.0-beta.24",
     "power-assert": "^1.4.1",
-    "babel-runtime": "^6.9.2"
+    "babel-runtime": "^6.9.2",
+    "docs-helpers-test": "^0.0.0-alpha.1"
   },
   "ava": {
     "files": [
