--- a/packages/docs-theme-material/package.json
+++ b/packages/docs-theme-material/package.json
@@ -7,5 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tyler Benton <tjbenton21@gmail.com> (https://github.com/tjbenton)",
-  "license": "ISC"
+  "license": "ISC",
+  "private": true
 }
