--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "lerna": "2.0.0-beta.24",
-  "version": "0.0.0-alpha.1",
+  "version": "0.0.0-alpha1",
   "publishConfig": {
     "ignore": [
       "docs-example"
