--- a/packages/docs-plugin-scss-content/package.json
+++ b/packages/docs-plugin-scss-content/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docs-plugin-scss-content",
-  "version": "0.0.0",
+  "version": "0.0.0-alpha1",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
