added basic support for the themes

--- a/packages/docs-core/package.json
+++ b/packages/docs-core/package.json
@@ -21,11 +21,13 @@
   "dependencies": {
     "async-array-methods": "^2.1.0",
     "babel-register": "^6.9.0",
+    "chokidar": "^1.6.0",
     "commander": "^2.9.0",
     "docs-helpers-logger": "^0.0.0-alpha1",
     "docs-parser": "^0.0.0-alpha.2",
-    "express": "^4.14.0",
     "fs-extra-promisify": "0.0.2",
+    "globby": "^6.0.0",
+    "harp": "github:sintaxi/harp#v0.21.0-pre",
     "to-js": "0.0.4"
   },
   "keywords": [
