--- a/packages/docs-core/package.json
+++ b/packages/docs-core/package.json
@@ -24,6 +24,7 @@
     "chokidar": "^1.6.0",
     "commander": "^2.9.0",
     "docs-helpers-logger": "^0.0.0-alpha1",
+    "docs-plugin-default-annotations": "*",
     "docs-parser": "^0.0.0-alpha.2",
     "fs-extra-promisify": "0.0.2",
     "globby": "^6.0.0",
