--- a/lerna.json
+++ b/lerna.json
@@ -1,4 +1,13 @@
 {
   "lerna": "2.0.0-beta.24",
-  "version": "0.0.0-alpha.2"
+  "version": "0.0.0-alpha.2",
+  "publishConfig": {
+    "ignore": [
+      "docs-example",
+      "*.md",
+      "tests/**",
+      "tools/**",
+      "scripts/**"
+    ]
+  }
 }
