--- a/packages/docs-helpers-logger/package.json
+++ b/packages/docs-helpers-logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docs-helpers-logger",
-  "version": "0.0.0-alpha1",
+  "version": "0.0.0-alpha.3",
   "description": "",
   "repository": {
     "type": "git",
