--- a/packages/docs-core/package.json
+++ b/packages/docs-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docs-core",
-  "version": "0.0.0-alpha.2",
+  "version": "0.0.0-alpha.5",
   "description": "",
   "repository": {
     "type": "git",
@@ -23,9 +23,9 @@
     "babel-register": "^6.9.0",
     "chokidar": "^1.6.0",
     "commander": "^2.9.0",
-    "docs-helpers-logger": "^0.0.0-alpha1",
-    "docs-plugin-default-annotations": "*",
-    "docs-parser": "^0.0.0-alpha.2",
+    "docs-helpers-logger": "^0.0.0-alpha.5",
+    "docs-plugin-default-annotations": "^0.0.0-alpha.5",
+    "docs-parser": "^0.0.0-alpha.5",
     "fs-extra-promisify": "0.0.2",
     "globby": "^6.0.0",
     "harp": "github:sintaxi/harp#v0.21.0-pre",
