--- a/packages/docs-example/package.json
+++ b/packages/docs-example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docs-example",
-  "version": "1.0.0",
+  "version": "0.0.0-alpha.5",
   "description": "This project is used to show how you can use docs",
   "repository": {
     "type": "git",
@@ -19,7 +19,7 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "docs-core": "0.0.0-alpha.2",
+    "docs-core": "^0.0.0-alpha.5",
     "babel-plugin-syntax-async-functions": "^6.5.0",
     "babel-plugin-transform-async-to-generator": "^6.7.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
