--- a/packages/docs-plugin-default-annotations/package.json
+++ b/packages/docs-plugin-default-annotations/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docs-plugin-default-annotations",
-  "version": "0.0.0",
+  "version": "0.0.0-alpha.5",
   "description": "Default annotations for docs",
   "repository": {
     "type": "git",
