--- a/lerna.json
+++ b/lerna.json
@@ -1,9 +1,13 @@
 {
   "lerna": "2.0.0-beta.24",
   "version": "0.0.0-alpha.5",
+  "bootstrapConfig": {
+    "ignore": [
+      "docs-example"
+    ]
+  },
   "publishConfig": {
     "ignore": [
-      "docs-example",
       "*.md",
       "tests/**",
       "tools/**",
