--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.8.0",
+    "babel-runtime": "^6.9.2",
     "chalk": "^1.1.3",
     "coveralls": "^2.11.8",
+    "docs-helpers-create-test": "file:packages/docs-helpers-create-test",
+    "docs-helpers-test": "^0.0.0-alpha.1",
     "eslint": "^2.13.1",
     "eslint-plugin-babel": "^3.3.0",
     "fly": "^1.3.0",
@@ -43,10 +46,7 @@
     "globby": "^5.0.0",
     "jsondiffpatch": "^0.1.43",
     "lerna": "2.0.0-beta.24",
-    "power-assert": "^1.4.1",
-    "babel-runtime": "^6.9.2",
-    "docs-helpers-test": "^0.0.0-alpha.1",
-    "docs-helpers-create-test": "file:packages/docs-helpers-create-test"
+    "power-assert": "^1.4.1"
   },
   "ava": {
     "files": [
