--- a/packages/docs-server/package.json
+++ b/packages/docs-server/package.json
@@ -15,5 +15,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "private": true
+  "private": true,
+  "dependencies": {}
 }
