--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "docs",
-  "version": "0.0.1-beta",
+  "version": "0.0.0-alpha-5.1",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "postinstall": "make bootstrap"
   },
@@ -22,31 +21,32 @@
     "ava": "^0.15.2",
     "ava-spec": "^1.0.1",
     "babel-eslint": "^6.0.4",
-    "babel-plugin-syntax-async-functions": "^6.5.0",
+    "babel-plugin-syntax-async-functions": "^6.13.0",
     "babel-plugin-transform-async-to-generator": "^6.7.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-regenerator": "^6.6.5",
-    "babel-plugin-transform-runtime": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-plugin-transform-regenerator": "^6.11.4",
+    "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.8.0",
-    "babel-runtime": "^6.9.2",
+    "babel-register": "^6.11.6",
+    "babel-runtime": "^6.11.6",
     "chalk": "^1.1.3",
-    "coveralls": "^2.11.8",
-    "docs-helpers-create-test": "file:packages/docs-helpers-create-test",
+    "coveralls": "^2.11.12",
+    "docs-helpers-create-test": "0.0.0-alpha1",
     "docs-helpers-test": "^0.0.0-alpha.1",
     "eslint": "^2.13.1",
     "eslint-plugin-babel": "^3.3.0",
-    "fly": "^1.3.0",
+    "fly": "github:flyjs/fly",
     "fly-ava": "^0.11.0",
-    "fly-babel": "^0.8.0",
-    "fly-esnext": "tjbenton/fly-esnext",
-    "fly-mocha": "^0.4.3",
+    "fly-babel": "^1.0.0",
+    "fly-esnext": "github:tjbenton/fly-esnext",
     "fs-extra-promisify": "0.0.2",
     "globby": "^5.0.0",
     "jsondiffpatch": "^0.1.43",
     "lerna": "2.0.0-beta.24",
-    "power-assert": "^1.4.1"
+    "power-assert": "^1.4.1",
+    "stylelint": "^7.1.0",
+    "to-js": "^0.0.5"
   },
   "ava": {
     "files": [
