--- a/packages/docs-parser/package.json
+++ b/packages/docs-parser/package.json
@@ -50,10 +50,10 @@
     "chokidar": "^1.4.3",
     "clor": "^2.0.2",
     "commander": "^2.9.0",
+    "docs-helpers-logger": "^0.0.0-alpha-5.1",
     "fs-extra-promisify": "^0.0.2",
-    "globby": "^4.0.0",
-    "to-js": "^0.0.4",
-    "docs-helpers-logger": "^0.0.0-alpha-5.1"
+    "to-js": "^0.0.5",
+    "globby": "^4.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
