--- a/packages/docs-theme-default-old/package.json
+++ b/packages/docs-theme-default-old/package.json
@@ -68,5 +68,6 @@
       "babel-runtime": "npm:babel-runtime@^5.8.24",
       "core-js": "npm:core-js@^1.1.4"
     }
-  }
+  },
+  "dependencies": {}
 }
