--- a/packages/docs-theme-default/package.json
+++ b/packages/docs-theme-default/package.json
@@ -14,5 +14,8 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "highlight.js": "^9.6.0"
   }
 }
