--- a/package.json
+++ b/package.json
@@ -21,14 +21,12 @@
     "ava": "^0.15.2",
     "ava-spec": "^1.0.1",
     "babel-eslint": "^6.0.4",
-    "babel-plugin-syntax-async-functions": "^6.13.0",
-    "babel-plugin-transform-async-to-generator": "^6.7.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-regenerator": "^6.11.4",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-preset-es2015": "^6.13.2",
+    "babel-plugin-transform-regenerator": "^6.14.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-preset-latest": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.11.6",
+    "babel-register": "^6.14.0",
     "babel-runtime": "^6.11.6",
     "chalk": "^1.1.3",
     "coveralls": "^2.11.12",
@@ -36,10 +34,10 @@
     "docs-helpers-test": "^0.0.0-alpha.1",
     "eslint": "^2.13.1",
     "eslint-plugin-babel": "^3.3.0",
-    "fly": "github:flyjs/fly",
+    "fly": "github:flyjs/fly#09674097a335588fc77382887a64c6b7d8772602",
     "fly-ava": "^0.11.0",
     "fly-babel": "^1.0.0",
-    "fly-esnext": "github:tjbenton/fly-esnext",
+    "fly-esnext": "github:tjbenton/fly-esnext#53af02718ba6c4e9d52a95d71927ee82606a9c96",
     "fs-extra-promisify": "0.0.2",
     "globby": "^5.0.0",
     "jsondiffpatch": "^0.1.43",
@@ -62,12 +60,10 @@
   },
   "babel": {
     "presets": [
-      "es2015",
+      "latest",
       "stage-0"
     ],
     "plugins": [
-      "syntax-async-functions",
-      "transform-async-to-generator",
       "transform-decorators-legacy",
       "transform-regenerator",
       "transform-runtime"
