--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0-alpha-5.1",
   "description": "",
   "scripts": {
-    "postinstall": "make bootstrap"
+    "postinstalssl": "make bootstrap"
   },
   "repository": {
     "type": "git",
@@ -22,11 +22,9 @@
     "ava-spec": "^1.0.1",
     "babel-eslint": "^6.0.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-regenerator": "^6.14.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-latest": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.14.0",
     "babel-runtime": "^6.11.6",
     "chalk": "^1.1.3",
     "coveralls": "^2.11.12",
@@ -34,13 +32,14 @@
     "docs-helpers-test": "^0.0.0-alpha.1",
     "eslint": "^2.13.1",
     "eslint-plugin-babel": "^3.3.0",
-    "fly": "github:flyjs/fly#09674097a335588fc77382887a64c6b7d8772602",
+    "fly": "^1.3.2",
     "fly-ava": "^0.11.0",
     "fly-babel": "^1.0.0",
-    "fly-esnext": "github:tjbenton/fly-esnext#53af02718ba6c4e9d52a95d71927ee82606a9c96",
+    "fly-esnext": "github:tjbenton/fly-esnext",
     "fly-rollup": "^1.0.0",
     "fs-extra-promisify": "0.0.2",
     "globby": "^5.0.0",
+    "icon-font-generator": "^1.0.4",
     "jsondiffpatch": "^0.1.43",
     "lerna": "2.0.0-beta.24",
     "power-assert": "^1.4.1",
@@ -67,7 +66,6 @@
     ],
     "plugins": [
       "transform-decorators-legacy",
-      "transform-regenerator",
       "transform-runtime"
     ]
   }
