--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0-alpha-5.1",
   "description": "",
   "scripts": {
-    "postinstalssl": "make bootstrap"
+    "postinstall": "make bootstrap"
   },
   "repository": {
     "type": "git",
@@ -35,8 +35,9 @@
     "fly": "^1.3.2",
     "fly-ava": "^0.11.0",
     "fly-babel": "^1.0.0",
-    "fly-esnext": "github:tjbenton/fly-esnext",
+    "fly-esnext": "^1.0.1",
     "fly-rollup": "^1.0.0",
+    "fly-stylus": "github:tjbenton/fly-stylus",
     "fs-extra-promisify": "0.0.2",
     "globby": "^5.0.0",
     "icon-font-generator": "^1.0.4",
@@ -58,15 +59,5 @@
     "match": [],
     "concurrency": 5,
     "timeout": "1m"
-  },
-  "babel": {
-    "presets": [
-      "latest",
-      "stage-0"
-    ],
-    "plugins": [
-      "transform-decorators-legacy",
-      "transform-runtime"
-    ]
   }
 }
