--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "homepage": "https://github.com/tjbenton/docs#readme",
   "devDependencies": {
     "async-array-methods": "^2.1.0",
-    "ava": "^0.15.2",
+    "ava": "^0.16.0",
     "ava-spec": "^1.0.1",
     "babel-eslint": "^6.0.4",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -30,19 +30,19 @@
     "coveralls": "^2.11.12",
     "docs-helpers-create-test": "0.0.0-alpha1",
     "docs-helpers-test": "^0.0.0-alpha.1",
-    "eslint": "^2.13.1",
+    "eslint": "^3.5.0",
     "eslint-plugin-babel": "^3.3.0",
     "fly": "^1.3.2",
-    "fly-ava": "^0.11.0",
+    "fly-ava": "^0.12.0",
     "fly-babel": "^1.0.0",
     "fly-esnext": "^1.0.1",
     "fly-rollup": "^1.0.0",
     "fly-stylus": "github:tjbenton/fly-stylus",
     "fs-extra-promisify": "0.0.2",
-    "globby": "^5.0.0",
+    "globby": "^6.0.0",
     "icon-font-generator": "^1.0.4",
-    "jsondiffpatch": "^0.1.43",
-    "lerna": "2.0.0-beta.24",
+    "jsondiffpatch": "^0.2.4",
+    "lerna": "^2.0.0-beta.29",
     "power-assert": "^1.4.1",
     "rollup-plugin-babel": "^2.6.1",
     "stylelint": "^7.1.0",
