--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 sudo: false
 language: node_js
+
 node_js:
-  - "6"
-  - "5"
   - "4"
-  - "0.12"
+  - "5"
+  - "6"
+
 cache:
   directories:
-    - ./node_modules
+    - $HOME/.node-gyp
+    - $HOME/.npm
+    - node_modules
+
 script: make ci-test
