--- a/packages/docs-core/package.json
+++ b/packages/docs-core/package.json
@@ -28,8 +28,8 @@
     "docs-plugin-default-annotations": "^0.0.0-alpha-5.1",
     "fs-extra-promisify": "0.0.2",
     "globby": "^6.0.0",
-    "to-js": "0.0.5",
-    "harp": "github:sintaxi/harp#v0.21.0-pre"
+    "harp": "github:sintaxi/harp#v0.21.0-pre",
+    "to-js": "0.0.6"
   },
   "keywords": [
     "css",
