--- a/packages/docs-theme-default/package.json
+++ b/packages/docs-theme-default/package.json
@@ -16,6 +16,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "highlight.js": "^9.6.0"
+    "highlight.js": "^9.6.0",
+    "marked": "^0.3.6",
+    "to-js": "0.0.5"
   }
 }
