--- a/packages/docs-core/package.json
+++ b/packages/docs-core/package.json
@@ -2,10 +2,7 @@
   "name": "docs-core",
   "version": "0.0.0-alpha-5.3",
   "description": "",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tjbenton/docs.git"
-  },
+  "repository": "https://github.com/tjbenton/docs/tree/master/packages/docs-core",
   "bugs": {
     "url": "https://github.com/tjbenton/docs/issues"
   },
