--- a/package.json
+++ b/package.json
@@ -2,9 +2,7 @@
   "name": "docs",
   "version": "0.0.0-alpha-5.1",
   "description": "",
-  "scripts": {
-    "postinstall": "make bootstrap"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tjbenton/docs.git"
