removed all annotations from `docs-parser`
These have been moved to docs-plugin-default-annotations`

--- a/packages/docs-parser/package.json
+++ b/packages/docs-parser/package.json
@@ -74,5 +74,8 @@
     "parser",
     "annotation",
     "comments"
-  ]
+  ],
+  "devDependencies": {
+    "docs-plugin-default-annotations": "0.0.0-alpha-5.5"
+  }
 }
