--- a/packages/docs-plugin-default-annotations/package.json
+++ b/packages/docs-plugin-default-annotations/package.json
@@ -15,5 +15,8 @@
   "dependencies": {
     "clor": "^2.0.2",
     "to-js": "^0.0.5"
+  },
+  "devDependencies": {
+    "docs-parser": "0.0.0-alpha-5.5"
   }
 }
