--- a/packages/docs-parser/package.json
+++ b/packages/docs-parser/package.json
@@ -32,8 +32,9 @@
     "commander": "^2.9.0",
     "docs-helpers-logger": "^0.0.0-alpha-5.5",
     "fs-extra-promisify": "^0.0.2",
-    "to-js": "^0.0.5",
-    "globby": "^4.0.0"
+    "globby": "^4.0.0",
+    "natural-sort": "~1.0.0",
+    "to-js": "^0.0.5"
   },
   "keywords": [
     "css",
