--- a/packages/docs-core/package.json
+++ b/packages/docs-core/package.json
@@ -25,7 +25,7 @@
     "docs-plugin-default-annotations": "^0.0.0-alpha-6.1",
     "fs-extra-promisify": "0.0.2",
     "globby": "^6.0.0",
-    "harp": "github:sintaxi/harp#v0.21.0-pre",
+    "harp": "0.23.0",
     "to-js": "0.0.6"
   },
   "keywords": [
