--- a/packages/docs-core/package.json
+++ b/packages/docs-core/package.json
@@ -23,6 +23,7 @@
     "docs-helpers-logger": "^0.0.0-alpha-6.1",
     "docs-parser": "^0.0.0-alpha-6.1",
     "docs-plugin-default-annotations": "^0.0.0-alpha-6.1",
+    "docs-theme-default": "^0.0.0-alpha-6.1",
     "fs-extra-promisify": "0.0.2",
     "globby": "^6.0.0",
     "harp": "0.23.0",
