--- a/packages/docs-example/package.json
+++ b/packages/docs-example/package.json
@@ -19,7 +19,6 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "docs-core": "^0.0.0-alpha-6.1",
-    "docs-theme-default": "^0.0.0-alpha-6.1"
+    "docs-core": "^0.0.0-alpha-6.1"
   }
 }
