--- a/packages/docs-core/package.json
+++ b/packages/docs-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docs-core",
-  "version": "0.0.0-alpha-6.1",
+  "version": "0.0.1",
   "description": "",
   "repository": "https://github.com/tjbenton/docs/tree/master/packages/docs-core",
   "bugs": {
@@ -20,10 +20,10 @@
     "babel-register": "^6.9.0",
     "chokidar": "^1.6.0",
     "commander": "^2.9.0",
-    "docs-helpers-logger": "^0.0.0-alpha-6.1",
-    "docs-parser": "^0.0.0-alpha-6.1",
-    "docs-plugin-default-annotations": "^0.0.0-alpha-6.1",
-    "docs-theme-default": "^0.0.0-alpha-6.1",
+    "docs-helpers-logger": "^0.0.1",
+    "docs-parser": "^0.0.1",
+    "docs-plugin-default-annotations": "^0.0.1",
+    "docs-theme-default": "^0.0.1",
     "fs-extra-promisify": "0.0.2",
     "globby": "^6.0.0",
     "harp": "0.23.0",
