--- a/packages/docs-example/package.json
+++ b/packages/docs-example/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docs-example",
-  "version": "0.0.0-alpha-6.1",
+  "version": "0.0.1",
   "description": "This project is used to show how you can use docs",
   "repository": {
     "type": "git",
@@ -19,6 +19,6 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "docs-core": "^0.0.0-alpha-6.1"
+    "docs-core": "^0.0.1"
   }
 }
