--- a/packages/docs-helpers-logger/package.json
+++ b/packages/docs-helpers-logger/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docs-helpers-logger",
-  "version": "0.0.0-alpha-6.1",
+  "version": "0.0.1",
   "description": "",
   "repository": "https://github.com/tjbenton/docs/tree/master/packages/docs-helpers-logger",
   "bugs": {
