--- a/packages/docs-plugin-scss-content/package.json
+++ b/packages/docs-plugin-scss-content/package.json
@@ -1,6 +1,6 @@
 {
   "name": "docs-plugin-scss-content",
-  "version": "0.0.0-alpha-6.1",
+  "version": "0.0.1",
   "description": "",
   "repository": {
     "type": "git",
