--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "docs-helpers-test": "^0.0.0-alpha.1",
     "eslint": "^3.5.0",
     "eslint-plugin-babel": "^3.3.0",
-    "fly": "^1.3.2",
+    "fly": "~1.4.1",
     "fly-ava": "^0.12.0",
     "fly-babel": "^1.0.0",
     "fly-esnext": "^1.0.1",
