--- a/packages/docs-core/package.json
+++ b/packages/docs-core/package.json
@@ -26,7 +26,7 @@
     "docs-theme-default": "^0.0.1",
     "fs-extra-promisify": "0.0.2",
     "globby": "^6.0.0",
-    "harp": "0.23.0",
+    "harp": "~0.24.1",
     "to-js": "0.0.6"
   },
   "keywords": [
